增加 即時匯率查詢

--- a/Sample.Repository.EF/Sample.Repository.EF.csproj
+++ b/Sample.Repository.EF/Sample.Repository.EF.csproj
@@ -71,6 +71,10 @@
     <Compile Include="Employees.cs">
       <DependentUpon>Northwind.tt</DependentUpon>
     </Compile>
+    <Compile Include="ExchangeRate.cs">
+      <DependentUpon>Northwind.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ExchangeRateRepository.cs" />
     <Compile Include="Northwind.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
