--- a/Sample.Domain/Sample.Domain.csproj
+++ b/Sample.Domain/Sample.Domain.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Employee.cs" />
+    <Compile Include="ExchangeRate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionHelper.cs" />
   </ItemGroup>
