--- a/Sample.Repository.Interface/Sample.Repository.Interface.csproj
+++ b/Sample.Repository.Interface/Sample.Repository.Interface.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IEmployeeRepository.cs" />
+    <Compile Include="IExchangeRateRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
