--- a/Sample.Web.MVC/Web.config
+++ b/Sample.Web.MVC/Web.config
@@ -15,7 +15,7 @@
     <!--<add name="NorthwindEntities" connectionString="metadata=res://*/Northwind.csdl|res://*/Northwind.ssdl|res://*/Northwind.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\v11.0;initial catalog=Northwind;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
-    <add key="RepositoryType" value="Sample.Repository.ADONET" />
+    <add key="RepositoryType" value="Sample.Repository.EF" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
