--- a/Sample.Web.MVC/packages.config
+++ b/Sample.Web.MVC/packages.config
@@ -14,7 +14,10 @@
   <package id="Microsoft.AspNet.Web.Optimization.zh-Hant" version="1.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages.zh-Hant" version="3.2.2" targetFramework="net451" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
